# ecosnail

./: CMakeLists.txt  LICENSE  create
argo/: CMakeLists.txt  exceptions.cpp
argo/examples/: CMakeLists.txt  basic.cpp
argo/include/ecosnail/: argo.hpp
argo/include/ecosnail/argo/: exceptions.hpp  messages.hpp  parser.hpp
argo/tests/: CMakeLists.txt
cmake/: project.cmake
config/: CMakeLists.txt
config/test/: CMakeLists.txt
dimentia/: CMakeLists.txt
projects/: CMakeLists.txt
projects/argo/: CMakeLists.txt  global_parser.cpp  parser.cpp
projects/argo/include/ecosnail/argo/: argument.hpp  argument_iterator.hpp  global_parser.hpp  messages.inc  shared_data.hpp
projects/argo/tests/: CMakeLists.txt  basic.cpp
projects/config/: CMakeLists.txt
projects/config/examples/: CMakeLists.txt
projects/config/sample/example_01_hello/: CMakeLists.txt
projects/dimentia/: CMakeLists.txt
projects/dimentia/examples/: CMakeLists.txt
projects/dimentia/tests/: CMakeLists.txt
projects/evening/: CMakeLists.txt
projects/evening/examples/: basic.cpp
projects/evening/include/ecosnail/: evening.hpp
projects/evening/tests/: CMakeLists.txt  container.cpp  subscriber.cpp  subscription.cpp
projects/flat/tests/: basic.cpp
projects/tail/: CMakeLists.txt
projects/tail/tests/: CMakeLists.txt
projects/tempo/: CMakeLists.txt
projects/tempo/examples/: basic.cpp
projects/thing/: CMakeLists.txt
projects/thing/include/ecosnail/thing/: entity_manager.hpp
projects/tops/: CMakeLists.txt
